<resources>
    <string name="app_name">TourmalineServiceExample</string>
    <string name="start_service">start service</string>
    <string name="start_service_background">start service in background</string>
    <string name="tourmaline_service">Tourmaline Service Example</string>
    <string name="foreground_notification_content_text">Automatically detecting and logging your travels for driving score computation.</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="change_user">Change User</string>
    <string name="current_user">Current User</string>
    <string name="message">Message</string>
    <string name="hide_logs">Hide Logs</string>
    <string name="show_logs">Show logs</string>
    <string name="update_logs">Update Logs</string>
</resources>
